Mold Optimized and UI features added

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -26,3 +26,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.Running",NewName="/Script/ComputeShaderExample.MoldShaderComponent.Paused")
