Added Custom Species
Start of moving shaders to actors

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,3 +32,11 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DisplayTrailMap",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DisplayTarget")
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DiffusedTrailMap",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DiffuseTarget")
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.TrailMap",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.TrailTarget")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.amountOfAgents",NewName="/Script/ComputeShaderExample.MoldShaderActor.AmountOfAgents")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.spawnMode",NewName="/Script/ComputeShaderExample.MoldShaderActor.SpawnMode")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.width",NewName="/Script/ComputeShaderExample.MoldShaderActor.Width")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.height",NewName="/Script/ComputeShaderExample.MoldShaderActor.Height")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.speed",NewName="/Script/ComputeShaderExample.MoldShaderActor.Speed")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.decayRate",NewName="/Script/ComputeShaderExample.MoldShaderActor.DecayRate")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.diffuseRate",NewName="/Script/ComputeShaderExample.MoldShaderActor.DiffuseRate")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.Paused",NewName="/Script/ComputeShaderExample.MoldShaderActor.bPaused")
