--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -40,3 +40,34 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.decayRate",NewName="/Script/ComputeShaderExample.MoldShaderActor.DecayRate")
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.diffuseRate",NewName="/Script/ComputeShaderExample.MoldShaderActor.DiffuseRate")
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.Paused",NewName="/Script/ComputeShaderExample.MoldShaderActor.bPaused")
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=Default
+-TargetedRHIs=PCD3D_SM5
++TargetedRHIs=PCD3D_SM5
+DefaultGraphicsRHI=DefaultGraphicsRHI_Default
+AudioSampleRate=48000
+AudioCallbackBufferFrameSize=1024
+AudioNumBuffersToEnqueue=1
+AudioMaxChannels=0
+AudioNumSourceWorkers=4
+SpatializationPlugin=
+SourceDataOverridePlugin=
+ReverbPlugin=
+OcclusionPlugin=
+CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
+CacheSizeKB=65536
+MaxChunkSizeOverrideKB=0
+bResampleForDevice=False
+MaxSampleRate=48000.000000
+HighSampleRate=32000.000000
+MedSampleRate=24000.000000
+LowSampleRate=12000.000000
+MinSampleRate=8000.000000
+CompressionQualityModifier=1.000000
+AutoStreamingThreshold=0.000000
+SoundCueCookQualityIndex=-1
+
+[/Script/Engine.RendererSettings]
+r.Mobile.FloatPrecisionMode=2
+
