Feature - Updated project to 5.2 and SM6
Changed structure to use the graph builder API, and merged render commands to multi-pass render commands using the graph builder

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -28,7 +28,7 @@ ManualIPAddress=
 
 
 [CoreRedirects]
-+PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.Running",NewName="/Script/ComputeShaderExample.MoldShaderComponent.Paused")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.Running",NewName="/Script/ComputeShaderExample.MoldShaderComponent.bPaused")
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DisplayTrailMap",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DisplayTarget")
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DiffusedTrailMap",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DiffuseTarget")
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.TrailMap",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.TrailTarget")
@@ -40,12 +40,54 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.decayRate",NewName="/Script/ComputeShaderExample.MoldShaderActor.DecayRate")
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.diffuseRate",NewName="/Script/ComputeShaderExample.MoldShaderActor.DiffuseRate")
 +PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderActor.Paused",NewName="/Script/ComputeShaderExample.MoldShaderActor.bPaused")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.width",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.Width")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.height",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.Height")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.amountOfAgents",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.AmountOfAgents")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.spawnMode",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.SpawnMode")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.trailWeight",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.TrailWeight")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.decayRate",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DecayRate")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.diffuseRate",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.DiffuseRate")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldV2ShaderComponent.Paused",NewName="/Script/ComputeShaderExample.MoldV2ShaderComponent.bPaused")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.LSystemShaderComponent.iterations",NewName="/Script/ComputeShaderExample.LSystemShaderComponent.SystemIterations")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.LSystemShaderComponent.width",NewName="/Script/ComputeShaderExample.LSystemShaderComponent.Width")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.LSystemShaderComponent.height",NewName="/Script/ComputeShaderExample.LSystemShaderComponent.Height")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.LSystemShaderComponent.Paused",NewName="/Script/ComputeShaderExample.LSystemShaderComponent.bPaused")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.LSystemShaderComponent.IterationsPerFrame",NewName="/Script/ComputeShaderExample.LSystemShaderComponent.SystemIterations")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.LineShaderComponent.Paused",NewName="/Script/ComputeShaderExample.LineShaderComponent.bPaused")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.Paused",NewName="/Script/ComputeShaderExample.MoldShaderComponent.bPaused")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.LineShaderComponent.amountOfAgents",NewName="/Script/ComputeShaderExample.LineShaderComponent.AmountOfAgents")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.LineShaderComponent.width",NewName="/Script/ComputeShaderExample.LineShaderComponent.Width")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.LineShaderComponent.height",NewName="/Script/ComputeShaderExample.LineShaderComponent.Height")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.width",NewName="/Script/ComputeShaderExample.MoldShaderComponent.Width")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.height",NewName="/Script/ComputeShaderExample.MoldShaderComponent.Height")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.speed",NewName="/Script/ComputeShaderExample.MoldShaderComponent.Speed")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.decayRate",NewName="/Script/ComputeShaderExample.MoldShaderComponent.DecayRate")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.diffuseRate",NewName="/Script/ComputeShaderExample.MoldShaderComponent.DiffuseRate")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.spawnMode",NewName="/Script/ComputeShaderExample.MoldShaderComponent.SpawnMode")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MoldShaderComponent.amountOfAgents",NewName="/Script/ComputeShaderExample.MoldShaderComponent.AmountOfAgents")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MandelbrotShaderComponent.width",NewName="/Script/ComputeShaderExample.MandelbrotShaderComponent.Width")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MandelbrotShaderComponent.height",NewName="/Script/ComputeShaderExample.MandelbrotShaderComponent.Height")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MandelbrotShaderComponent.zoom",NewName="/Script/ComputeShaderExample.MandelbrotShaderComponent.Zoom")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MandelbrotShaderComponent.center",NewName="/Script/ComputeShaderExample.MandelbrotShaderComponent.Center")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.MandelbrotShaderComponent.iterations",NewName="/Script/ComputeShaderExample.MandelbrotShaderComponent.Iterations")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.SpeciesSettings.moveSpeed",NewName="/Script/ComputeShaderExample.SpeciesSettings.MoveSpeed")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.SpeciesSettings.turnSpeed",NewName="/Script/ComputeShaderExample.SpeciesSettings.TurnSpeed")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.SpeciesSettings.sensorAngleDegrees",NewName="/Script/ComputeShaderExample.SpeciesSettings.SensorAngleDegrees")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.SpeciesSettings.sensorOffsetDst",NewName="/Script/ComputeShaderExample.SpeciesSettings.SensorOffsetDst")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.SpeciesSettings.sensorSize",NewName="/Script/ComputeShaderExample.SpeciesSettings.SensorSize")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.SpeciesSettings.colour",NewName="/Script/ComputeShaderExample.SpeciesSettings.Colour")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.SpeciesSettings.Colour",NewName="/Script/ComputeShaderExample.SpeciesSettings.Color")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.AgentV2.position",NewName="/Script/ComputeShaderExample.AgentV2.Position")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.AgentV2.angle",NewName="/Script/ComputeShaderExample.AgentV2.Angle")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.AgentV2.speciesMask",NewName="/Script/ComputeShaderExample.AgentV2.SpeciesMask")
++PropertyRedirects=(OldName="/Script/ComputeShaderExample.AgentV2.speciesIndex",NewName="/Script/ComputeShaderExample.AgentV2.SpeciesIndex")
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 Compiler=Default
 -TargetedRHIs=PCD3D_SM5
 +TargetedRHIs=PCD3D_SM5
-DefaultGraphicsRHI=DefaultGraphicsRHI_Default
++TargetedRHIs=PCD3D_SM6
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
 AudioSampleRate=48000
 AudioCallbackBufferFrameSize=1024
 AudioNumBuffersToEnqueue=1
